[tool.poetry]
name = "expool"
version = "0.1.0"
description = "Simple asynchronous execution pool primitive for Python 3.6+"
authors = ["monomonedula <valh@tuta.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"
mypy = "^0.812"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
